--- a/ejercicios/hello.qmd
+++ b/ejercicios/hello.qmd
@@ -65,12 +65,19 @@ gapminder_plot(2007)
 ## Handcalcs
 
 ```{python}
-import IPython
 import handcalcs.render
+from handcalcs import handcalc
+import pandas
 ```
 ```{python}
 %%render long
-A_1 = 34.5 #m$^2$
-m_s = 2.35 #kg$\cdot$s$^{-1}$
-F = m_s/A_1 #kg$\cdot$m$^{-2}\cdot$s$^{-1}$
+A_1 = 34.5
+m_s = 2.35
+F = m_s/A_1
 ```
+
+#m$^2$
+#kg$\cdot$s$^{-1}$
+#kg$\cdot$m$^{-2}\cdot$s$^{-1}$
+
+final
