--- a/ejercicios/hello2.ipynb
+++ b/ejercicios/hello2.ipynb
@@ -3036,32 +3036,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
         "import handcalcs.render\n",
-        "import IPython"
+        "import IPython\n",
+        "ip = IPython.core.getipython.get_ipython()\n",
+        "ip.display_formatter.formatters['text/latex'].enabled = True"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "data": {
-            "text/latex": [
-              "\\[\n",
-              "\\begin{aligned}\n",
-              "A_{1} &= 34.500 \\; \\;\\textrm{(m$^2$)}\n",
-              "\\\\[10pt]\n",
-              "m_{s} &= 2.350 \\; \\;\\textrm{(kg$\\cdot$s$^{-1}$)}\n",
-              "\\\\[10pt]\n",
-              "F &= \\frac{ m_{s} }{ A_{1} } \\\\&= \\frac{ 2.350 }{ 34.500 } \\\\&= 0.068 \\; \\;\\textrm{(kg$\\cdot$m$^{-2}\\cdot$s$^{-1}$)}\\\\[10pt]\n",
-              "\\end{aligned}\n",
-              "\\]"
-            ],
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -3071,10 +3062,10 @@
         }
       ],
       "source": [
-        "%%render long\n",
+        "%%render\n",
         "A_1 = 34.5 #m$^2$\n",
         "m_s = 2.35 #kg$\\cdot$s$^{-1}$\n",
-        "F = m_s/A_1 #kg$\\cdot$m$^{-2}\\cdot$s$^{-1}$"
+        "F = m_s/A_1 #kg$\\cdot$m$^{-2}\\cdot$s$^{-1}$\n"
       ]
     }
   ],
