--- a/ejercicios/e2_5_3.ipynb
+++ b/ejercicios/e2_5_3.ipynb
@@ -5,7 +5,10 @@
    "id": "83df4a11-d426-48df-8159-45f1be38f871",
    "metadata": {},
    "source": [
-    "# Ejercicio 3: Evaporador de 2 efectos *backward*"
+    "---\n",
+    "title: \"Ejercicio 3: Evaporador de 2 efectos *backward*\"\n",
+    "jupyter: python3\n",
+    "---"
    ]
   },
   {
@@ -29,15 +32,7 @@
    "id": "c6c7eccf-b731-4e25-9e63-91166c9c6d1a",
    "metadata": {},
    "source": [
-    "```{figure} ./images/img2_5_3.png\n",
-    "---\n",
-    "align: center\n",
-    "name: fig253\n",
-    "scale: 60%\n",
-    "---\n",
-    "\n",
-    "Diagrama de evaporador de 2 efectos backward.\n",
-    "```"
+    "![Sistema de dos efectos backward.](img2_5_3.png){width=60%}"
    ]
   },
   {
@@ -45,7 +40,7 @@
    "id": "75c00948-2520-4a76-954d-e25dc4c816fd",
    "metadata": {},
    "source": [
-    "Además, su mejor amigo le asegura que las diferencias de temperatura para cada intercambiador son $\\Delta T_1 = 22~\\text{°C}$ y$\\Delta T_2 = 15~\\text{°C}$. Para corroborar, le entrega la siguiente información.\n",
+    "Además, su mejor amigo le asegura que las diferencias de temperatura para cada intercambiador son $\\Delta T_1 = 22~\\text{°C}$ y $\\Delta T_2 = 15~\\text{°C}$. Para corroborar, le entrega la siguiente información.\n",
     "- La gravedad específica para sólidos disueltos al $19\\%$ es $1.0632$ y la densidad del agua es $0.995~\\text{kg/L}$.\n",
     "- Las elevaciones del punto de ebullición (EPE) son $7~\\text{°C}$ y $4~\\text{°C}$ para el primer y segundo efecto respectivamente.\n",
     "- Los coeficientes de transferencia global de calor corregidos son $25555.12~\\text{W/m}^2\\cdot\\text{K}$ para $\\text{E}1$ y $39974.8~\\text{W/m}^2\\cdot\\text{K}$ para $\\text{E}2$.\n",
@@ -70,27 +65,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f261aee9-c9af-4bb0-8681-635b44a8e8eb",
-   "metadata": {},
-   "source": [
-    "{ref}`Ver solución <part2:cap5:ex3:sol>`\n",
-    "\n",
-    "<br/><br/>\n",
-    "<br/><br/>\n",
-    "<br/><br/>\n",
-    "<br/><br/>\n",
-    "<br/><br/>\n",
-    "<br/><br/>\n",
-    "<br/><br/>\n",
-    "<br/><br/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9f144920-1423-406b-a45d-95b62b1519d1",
    "metadata": {},
    "source": [
-    "(part2:cap5:ex3:sol)=\n",
     "## Solución"
    ]
   },
@@ -101,9 +78,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import handcalcs\n",
     "import handcalcs.render\n",
     "handcalcs.set_option(\"custom_symbols\",{\"dT\": \"\\Delta T\", \"dEPE\": \"\\Delta EPE\", \"dotm\": \"\\dot{m\", \"lambda\": \"\\lambda\"})\n",
+    "handcalcs.set_option(\"latex_block_start\", \"$$\")\n",
+    "handcalcs.set_option(\"latex_block_end\", \"$$\")\n",
     "from sympy import *\n",
     "from sympy.solvers.solveset import linsolve"
    ]
