--- a/ejercicios/e2_5_3.ipynb
+++ b/ejercicios/e2_5_3.ipynb
@@ -32,7 +32,7 @@
    "id": "c6c7eccf-b731-4e25-9e63-91166c9c6d1a",
    "metadata": {},
    "source": [
-    "![Sistema de dos efectos backward.](img2_5_3.png){width=60%}"
+    "![S](img2_5_3.png){width=60%}"
    ]
   },
   {
@@ -41,6 +41,7 @@
    "metadata": {},
    "source": [
     "Además, su mejor amigo le asegura que las diferencias de temperatura para cada intercambiador son $\\Delta T_1 = 22~\\text{°C}$ y $\\Delta T_2 = 15~\\text{°C}$. Para corroborar, le entrega la siguiente información.\n",
+    "\n",
     "- La gravedad específica para sólidos disueltos al $19\\%$ es $1.0632$ y la densidad del agua es $0.995~\\text{kg/L}$.\n",
     "- Las elevaciones del punto de ebullición (EPE) son $7~\\text{°C}$ y $4~\\text{°C}$ para el primer y segundo efecto respectivamente.\n",
     "- Los coeficientes de transferencia global de calor corregidos son $25555.12~\\text{W/m}^2\\cdot\\text{K}$ para $\\text{E}1$ y $39974.8~\\text{W/m}^2\\cdot\\text{K}$ para $\\text{E}2$.\n",
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6a0d4e98-0f49-44bd-a8d8-5439f2668970",
    "metadata": {},
    "outputs": [],
@@ -96,21 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "736fc29f-90b9-466b-a00a-e335a1e01a6e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "w_{f} &= 0.190 \\; \n",
        " &w_{p} &= 0.400 \\; \n",
        " &\\rho_{w} &= 0.995 \\; \\;\\textrm{(kg/L)}\n",
        "\\\\[10pt]\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -137,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "142d24ab-69cb-43bb-ad35-0a5a49616eaf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "F &= 80000 \\cdot 1.0632 \\cdot \\rho_{w}  = 80000 \\cdot 1.0632 \\cdot 0.99 &= 84630.72 \\; \\;\\textrm{(kg)}\n",
        "\\\\[10pt]\n",
@@ -152,7 +153,7 @@
        "\\\\[10pt]\n",
        "V &= F - P  = 84630.72 - 40199.59 &= 44431.13 \\; \\;\\textrm{(kg)}\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -183,20 +184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fbcc8ae5-8378-4358-aebe-cb7197408b93",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "V_{E2} &= \\frac{ V }{ 2 }  = \\frac{ 44431.128 }{ 2 } &= 22215.564 \\; \\;\\textrm{(kg)}\n",
        "\\\\[10pt]\n",
        "w_{E2} &= \\frac{ w_{f} \\cdot F }{ F - V_{E2} }  = \\frac{ 0.190 \\cdot 84630.720 }{ 84630.720 - 22215.564 } &= 0.258  \n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -230,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9f473c1a-bb3b-456c-ad84-58889a1670cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "\\Delta T_{1} &= 22 \\; \n",
        " &\\Delta EPE_{1} &= 7 \\; \n",
@@ -250,7 +251,7 @@
        " \\lambda_{1} &= 2341000.000 \\; \\;\\textrm{(J/kg)}\n",
        " &\\lambda_{2} &= 2678000.000 \\; \\;\\textrm{(J/kg)}\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b55b77ec-c834-4297-9d2b-ff293c0f2309",
    "metadata": {},
    "outputs": [],
@@ -303,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "22e07c37-18e4-4364-b202-d5f83e263a62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "& \\textrm{ Temperaturas en $^\\circ$C}\\\\[10pt]\n",
        "T_{s} &= 110 \\; \\;\\textrm{(Vapor que entra a E1)}\n",
@@ -329,7 +330,7 @@
        "\\\\[10pt]\n",
        "T_{F} &= 25 \\; \\;\\textrm{(Líquido que entra a a)}\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "10f93012-a9db-4def-9ead-ebd43dc6e1e3",
    "metadata": {},
    "outputs": [],
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9c0e29db-c658-42de-aeb3-39a0745ba059",
    "metadata": {},
    "outputs": [
@@ -399,7 +400,7 @@
        "Eq(2183000.0*\\dot{m}_s, 2429104.8696*\\dot{m}_2 - 94107244872.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3f670c80-04f9-46fa-9214-96b0c56eb49d",
    "metadata": {},
    "outputs": [
@@ -436,7 +437,7 @@
        "Eq(2341000.0*\\dot{m}_2 - 94107244872.0, 231245952445.871 - 2678000.0*\\dot{m}_2)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "47a4fb43-9526-4d21-95d4-a632ef4abd35",
    "metadata": {},
    "outputs": [],
@@ -469,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "af142fee-8007-47ef-9e5a-0a798f68c3bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "\\dot{m_{s}} &= 29023.0 \\; \\;\\textrm{(kg/h)}\n",
        "\\\\[10pt]\n",
@@ -486,7 +487,7 @@
        "\\\\[10pt]\n",
        "\\dot{m_{F}} &= 84631 \\; \\;\\textrm{(kg/h)}\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -518,14 +519,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "12e45be3-3390-4133-b9b5-42b13568322e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "U_{1} &= 25555.120 \\; \\;\\textrm{(W/m$^2\\cdot$K)}\n",
        "\\\\[10pt]\n",
@@ -541,7 +542,7 @@
        "\\\\[10pt]\n",
        "A_{2} &= \\frac{ q_{2} }{ U_{2} \\cdot \\Delta T_{2} } \\\\&= \\frac{ 16574749.031 }{ 39974.800 \\cdot 15 } \\\\&= 27.642 \\; \\;\\textrm{(m$^2$)}\\\\[10pt]\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -572,14 +573,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d5906a75-6f41-4acc-8c5c-a5e08756e438",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "A_{prom} &= \\frac{ A_{1} + A_{2} }{ 2 }  = \\frac{ 31.304 + 27.642 }{ 2 } &= 29.473  \n",
        "\\\\[10pt]\n",
@@ -587,7 +588,7 @@
        "\\\\[10pt]\n",
        "\\Delta T_{c2} &= \\Delta T_{2} \\cdot \\left( \\frac{ A_{2} }{ A_{prom} } \\right)  = 15 \\cdot \\left( \\frac{ 27.642 }{ 29.473 } \\right) &= 14.068  \n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -614,14 +615,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "358ad074-2c5d-4118-985e-5898c97c8eda",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "& \\textrm{ Temperaturas en $^\\circ$C}\\\\[10pt]\n",
        "T_{s} &= 110 \\; \\;\\textrm{(Vapor que entra a E1)}\n",
@@ -640,7 +641,7 @@
        "\\\\[10pt]\n",
        "T_{F} &= 25 \\; \\;\\textrm{(Líquido que entra a a)}\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -673,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "bb7626db-c763-4809-afad-75a3478b8f83",
    "metadata": {},
    "outputs": [
@@ -686,7 +687,7 @@
        "Eq(2183000.0*\\dot{m}_s, 2425248.49178518*\\dot{m}_2 - 94107244872.0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "b47f66fd-711d-416b-89ff-26b56e29affe",
    "metadata": {},
    "outputs": [
@@ -714,7 +715,7 @@
        "Eq(2341000.0*\\dot{m}_2 - 94107244872.0, 231242568253.435 - 2678000.0*\\dot{m}_2)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "404de0ec-7de7-455e-b5f9-ce9b964e0322",
    "metadata": {},
    "outputs": [],
@@ -747,14 +748,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c75ea88b-a4cf-4431-b1bc-2eb4053d3986",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "\\dot{m_{s}} &= 28908.0 \\; \\;\\textrm{(kg/h)}\n",
        "\\\\[10pt]\n",
@@ -764,7 +765,7 @@
        "\\\\[10pt]\n",
        "\\dot{m_{F}} &= 84630.72 \\; \\;\\textrm{(kg/h)}\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -792,14 +793,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "317a4496-2a68-4a9c-ba77-a7afc4021a66",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "U_{1} &= 25555.1 \\; \\;\\textrm{(W/m$^2\\cdot$K)}\n",
        "\\\\[10pt]\n",
@@ -815,7 +816,7 @@
        "\\\\[10pt]\n",
        "A_{2} &= \\frac{ q_{2} }{ U_{2} \\cdot \\Delta T_{c2} } \\\\&= \\frac{ 16662257.7 }{ 39974.8 \\cdot 14.1 } \\\\&= 29.6 \\; \\;\\textrm{(m$^2$)}\\\\[10pt]\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -846,18 +847,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "3b4ab57b-095d-4f2e-bd57-99bff7f38f5e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "A_{prom} &= \\frac{ A_{1} + A_{2} }{ 2 }  = \\frac{ 29.4 + 29.6 }{ 2 } &= 29.5  \n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -898,18 +899,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "1b223f67-392d-4ee1-8e94-82e9930f36b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "E &= \\frac{ V }{ \\dot{m_{s}} }  = \\frac{ 44431.13 }{ 28908.0 } &= 1.54 \\; \\;\\textrm{(kg/kg)}\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -946,18 +947,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "3de93cbf-f0c3-457c-a23f-b21c6f953142",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "q_{C} &= \\left( \\frac{ \\dot{m_{F}} - \\dot{m_{2}} }{ 3600 } \\right) \\cdot \\lambda_{2} - \\left( \\frac{ \\dot{m_{F}} }{ 3600 } \\right) \\cdot \\operatorname{c_{p}} \\left( T_{a} ,\\  T_{F} \\right) \\cdot \\left( T_{a} - T_{F} \\right) \\\\&= \\left( \\frac{ 84630.720 - 64823.633 }{ 3600 } \\right) \\cdot 2678000.000 - \\left( \\frac{ 84630.720 }{ 3600 } \\right) \\cdot \\operatorname{c_{p}} \\left( 51.565 ,\\  25 \\right) \\cdot \\left( 51.565 - 25 \\right) \\\\&= 12392083.821 \\; \\;\\textrm{(W)}\\\\[10pt]\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
@@ -974,18 +975,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "e70f1584-ee26-4941-9b50-c6e15711670f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[\n",
+       "$$\n",
        "\\begin{aligned}\n",
        "R &= 12.4 \\; \\;\\textrm{(MW)}\n",
        "\\end{aligned}\n",
-       "\\]"
+       "$$"
       ],
       "text/plain": [
        "<IPython.core.display.Latex object>"
