--- a/ejercicios/e2_5_3.ipynb
+++ b/ejercicios/e2_5_3.ipynb
@@ -32,7 +32,7 @@
    "id": "c6c7eccf-b731-4e25-9e63-91166c9c6d1a",
    "metadata": {},
    "source": [
-    "![S](img2_5_3.png){width=60%}"
+    "![S](.\\img2_5_3.png){width=60%}"
    ]
   },
   {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "6a0d4e98-0f49-44bd-a8d8-5439f2668970",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "736fc29f-90b9-466b-a00a-e335a1e01a6e",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "142d24ab-69cb-43bb-ad35-0a5a49616eaf",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "fbcc8ae5-8378-4358-aebe-cb7197408b93",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "9f473c1a-bb3b-456c-ad84-58889a1670cd",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "b55b77ec-c834-4297-9d2b-ff293c0f2309",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "22e07c37-18e4-4364-b202-d5f83e263a62",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "10f93012-a9db-4def-9ead-ebd43dc6e1e3",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "9c0e29db-c658-42de-aeb3-39a0745ba059",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
        "Eq(2183000.0*\\dot{m}_s, 2429104.8696*\\dot{m}_2 - 94107244872.0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "3f670c80-04f9-46fa-9214-96b0c56eb49d",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "Eq(2341000.0*\\dot{m}_2 - 94107244872.0, 231245952445.871 - 2678000.0*\\dot{m}_2)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "47a4fb43-9526-4d21-95d4-a632ef4abd35",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "af142fee-8007-47ef-9e5a-0a798f68c3bc",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "12e45be3-3390-4133-b9b5-42b13568322e",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "d5906a75-6f41-4acc-8c5c-a5e08756e438",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "id": "358ad074-2c5d-4118-985e-5898c97c8eda",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "bb7626db-c763-4809-afad-75a3478b8f83",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
        "Eq(2183000.0*\\dot{m}_s, 2425248.49178518*\\dot{m}_2 - 94107244872.0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "b47f66fd-711d-416b-89ff-26b56e29affe",
    "metadata": {},
    "outputs": [
@@ -715,7 +715,7 @@
        "Eq(2341000.0*\\dot{m}_2 - 94107244872.0, 231242568253.435 - 2678000.0*\\dot{m}_2)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "404de0ec-7de7-455e-b5f9-ce9b964e0322",
    "metadata": {},
    "outputs": [],
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "c75ea88b-a4cf-4431-b1bc-2eb4053d3986",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "317a4496-2a68-4a9c-ba77-a7afc4021a66",
    "metadata": {},
    "outputs": [
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "id": "3b4ab57b-095d-4f2e-bd57-99bff7f38f5e",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "id": "1b223f67-392d-4ee1-8e94-82e9930f36b0",
    "metadata": {},
    "outputs": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "id": "3de93cbf-f0c3-457c-a23f-b21c6f953142",
    "metadata": {},
    "outputs": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "e70f1584-ee26-4941-9b50-c6e15711670f",
    "metadata": {},
    "outputs": [
