--- a/ejercicios/hello2.ipynb
+++ b/ejercicios/hello2.ipynb
@@ -19,6 +19,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![imgagen](.\\img2_5_3.png)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
