--- a/ejercicios/hello.qmd
+++ b/ejercicios/hello.qmd
@@ -3,12 +3,11 @@ title: Quarto Computations
 jupyter: python3
 ---
 
-## NumPy <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Show</a>
+## NumPy
+<a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Show</a>
 
 ::: {#multiCollapseExample1 .collapse .multi-collapse}
-
-lore ipsum dolor sit amet 2
-
+hello
 ```{python}
 import numpy as np
 a = np.arange(15).reshape(3, 5)
