--- a/ejercicios/e2_5_3.ipynb
+++ b/ejercicios/e2_5_3.ipynb
@@ -69,7 +69,11 @@
    "id": "9f144920-1423-406b-a45d-95b62b1519d1",
    "metadata": {},
    "source": [
-    "## Solución"
+    "## Solución\n",
+    "\n",
+    "<button class=\"btn btn-success\" data-bs-toggle=\"collapse\" href=\"#multiCollapseExample1\" aria-expanded=\"false\">Mostrar solución</button>\n",
+    "\n",
+    "::: {#multiCollapseExample1 .collapse .multi-collapse}"
    ]
   },
   {
@@ -999,6 +1003,14 @@
    "source": [
     "%%render params 1\n",
     "R = q_C/10**6 #MW"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "344f245b",
+   "metadata": {},
+   "source": [
+    ":::"
    ]
   }
  ],
