--- a/ejercicios/hello.qmd
+++ b/ejercicios/hello.qmd
@@ -1,7 +1,13 @@
 ---
 title: Quarto Computations
 jupyter: python3
+notebook-view: 
+    - notebook: .\e2_5_3.ipynb
+        title: "Solución"
 ---
+## Embeded
+
+{{< embed .\e2_5_3.ipynb >}}
 
 ## NumPy
 <button class="btn btn-success" data-bs-toggle="collapse" href="#multiCollapseExample1" aria-expanded="false">Mostrar solución</button>
