--- a/ejercicios/hello.qmd
+++ b/ejercicios/hello.qmd
@@ -1,10 +1,7 @@
 ---
 title: Quarto Computations
 jupyter: python3
-notebook-view: 
-    - notebook: ./e2_5_3.ipynb
-      url: ./e2_5_3.ipynb
-      title: "Solución"
+notebook-view: false
 ---
 ## Embeded
 
