--- a/ejercicios/hello.qmd
+++ b/ejercicios/hello.qmd
@@ -1,11 +1,13 @@
 ---
 title: Quarto Computations
 jupyter: python3
-notebook-view: false
+notebook-view:
+    - notebook: .\e2_3_2.ipynb
+      title: "Ejercicio de prueba"
 ---
 ## Embeded
 
-{{< embed .\e2_5_3.ipynb >}}
+{{< embed .\e2_3_1.ipynb >}}
 
 ## NumPy
 <button class="btn btn-success" data-bs-toggle="collapse" href="#multiCollapseExample1" aria-expanded="false">Mostrar solución</button>
